--- a/package.json
+++ b/package.json
@@ -66,8 +66,11 @@
     "dotenv": "^8.2.0",
     "imports-loader": "^0.8.0",
     "jquery": "^3.4.1",
+    "moment-timezone": "^0.5.28",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-modal": "^3.11.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "reactstrap": "^8.4.1",
